# workspaces/backend/internal/models/workspaces/types.go
@@ -17,7 +17,8 @@ limitations under the License.
 package workspaces
 
 import (
-	"github.com/kubeflow/notebooks/workspaces/backend/internal/models/common"
+	commonCore "github.com/kubeflow/notebooks/workspaces/backend/internal/models/common"
+	commonAssets "github.com/kubeflow/notebooks/workspaces/backend/internal/models/common/assets"
 )
 
 // WorkspaceListItem represents a workspace in the system, and is returned by LIST operations.
@@ -36,7 +37,7 @@ type WorkspaceListItem struct {
 	PodTemplate    PodTemplate       `json:"podTemplate"`
 	Activity       Activity          `json:"activity"`
 	Services       []Service         `json:"services"`
-	Audit          common.Audit      `json:"audit"`
+	Audit          commonCore.Audit  `json:"audit"`
 }
 
 type WorkspaceState string
@@ -51,14 +52,10 @@ const (
 )
 
 type WorkspaceKindInfo struct {
-	Name    string   `json:"name"`
-	Missing bool     `json:"missing"`
-	Icon    ImageRef `json:"icon"`
-	Logo    ImageRef `json:"logo"`
-}
-
-type ImageRef struct {
-	URL string `json:"url"`
+	Name    string                `json:"name"`
+	Missing bool                  `json:"missing"`
+	Icon    commonAssets.ImageRef `json:"icon"`
+	Logo    commonAssets.ImageRef `json:"logo"`
 }
 
 type PodTemplate struct {
